# Deep-Consensus-Finding

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  contributing.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
src/: dataset_nlp.py  dna_dataset.py  dna_dataset_v2.py  generate_DNA.py  inference.py  inference_dna.py  main.py  model.py
tests/helpers/: run_command.py
